# AutoXAI4Omics

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEV_MANUAL.md  Dockerfile  README.md  _version.py  pyproject.toml  pytest.ini
.github/workflows/: docker-image.yml  release-on-main.yml
autoxai4omics/models/tabauto/: keras_model.py
autoxai4omics/omics/: R_replacement.py  geneExp.py  metabolomic.py  tabular.py
autoxai4omics/plotting/: plots_both.py
autoxai4omics/plotting/importance/: perm_imp.py
autoxai4omics/utils/: load.py
autoxai4omics/utils/ml/: data_split.py  feature_selection.py
autoxai4omics/utils/ml/tests/: test_feature_selection.py
autoxai4omics/utils/parser/: config_model.py  data_model.py  featureSelection_model.py  ml_model.py  plotting_model.py  prediction_model.py  schema.json
