[project]
name = "autoxai4omics"
version = "1.3.0"
description = ""
authors = [
    {name = "IMB Research UK HCLS",email = "James.Strudwick@ibm.com"}
]
license = {text = "AL2"}
readme = "README.md"
package-mode = false
requires-python = ">=3.9,<3.12"
dependencies = [
    "autokeras (==1.0.20)",
    "bioinfokit (>=2.1.0)",
    "calour @ git+https://github.com/biocore/calour.git@2020.8.6",
    "conorm (>=1.2.0)",
    "eli5 (>=0.16.0)",
    "imblearn (==0.0)",
    "lightgbm (>=4.6.0)",
    "optuna (==3.6)",
    "pydantic (>=2.7.0)",
    "shap (==0.47.2)",
    "xgboost (>=2.1.4)",

    # non-root requirements
    "matplotlib (>=3.6.1,<4.0.0)",
    "numpy (>=1.23.5,<2.0.0)", # 2.0 now available
    "pandas (>=1.5.0,<2.0.0)", # 2.0 now available
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.10.0,<2.0.0)",
    "seaborn (>=0.10.0,<1.0.0)",
    "tensorflow (>=2.14.0,<3.0.0)",

    #required to make work
    "keras-tuner (==1.1.3)",
    "keras (<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pip-licenses = ">=4.4,<5.0"
pipdeptree = ">=2.18,<3.0"
jupyter = "^1.1.1"
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = ">=5.0,<6.0"
tox = "^4.28.4"

[tool.pytest.ini_options]
addopts = '--cov=autoxai4omics/ --cov-report=xml'
testpaths = [
    'autoxai4omics',
]

[tool.tox]
legacy_tox_ini = '''
    [tox]
    isolated_build = True
    envlist = py39,py311,py310

    [testenv]
    allowlist_externals = poetry
    commands =
        poetry install
        poetry run pytest
'''

[tool.coverage.run]
omit = ['*/tests/*']

[tool.coverage.report]
fail_under = 20
skip_empty = true
